[package]

name = "spark"
version = "0.4.0"
authors = ["Jiří Šebele <sindriava@gmail.com>"]

description = "▄▆▂█▁ in your Rust!"
repository = "https://github.com/jiri/rust-spark"
readme = "README.md"
license = "WTFPL"

[lib]

name = "spark"
path = "src/lib.rs"

[[bin]]

name = "spark"
path = "src/main.rs"
doc = false

